fix some rendering issus

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Attractions</string>
     <string name="home_title">Taipei Tour</string>
     <string name="address">Address</string>
+    <string name="not_found">Not found</string>
 </resources>
