--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -3,4 +3,5 @@
     <string name="home_title">타이베이 투어</string>
     <string name="address">주소</string>
     <string name="last_updated_time">마지막 업데이트 시간</string>
+    <string name="not_found">찾을 수 없음</string>
 </resources>
