--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home_title">TaipeiTour</string>
     <string name="address">Address</string>
     <string name="last_updated_time">Last Updated Time</string>
+    <string name="not_found">Not found</string>
 </resources>
